--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <p>Paste the PS! importable below.</p>
                 <textarea rows="9" cols="40" id = "customMon"></textarea>
                 <br>
+                <script type="text/javascript" src="custom_parser.js"></script>
+                <button type = "button" onclick = 'document.getElementById("Output").innerHTML = "Hello JavaScript!"'>Convert!</button>
+  
+  <p id="Output"></p>
 </div>
 </body>
 </html>
