--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <p>Paste the PS! importable below.</p>
                 <textarea rows="9" cols="40" id = "customMon"></textarea>
                 <br>
-                <script type="text/javascript" src="custom_parser.js"></script>
-                <button type = "button" onclick = 'document.getElementById("Output").innerHTML = "Hello JavaScript!"'>Convert!</button>
+                <script type="text/javascript" src="script.js"></script>
+                <button type = "button" onclick = 'script.js'>Convert!</button>
   
   <p id="Output"></p>
 </div>
