--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <textarea rows="9" cols="40" id = "customMon"></textarea>
                 <br>
                 <script type="text/javascript" src="script.js"></script>
-                <button type = "button" onclick = 'script.js'>Convert!</button>
+                <button type = "button" onclick = 'runtest()'>Convert!</button>
   
   <p id="Output"></p>
 </div>
