--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <script type="text/javascript" src="script.js"></script>
                 <button type = "button" onclick = 'exportresult()'>Convert!</button>
   
-  <p id="Output"></p>
+  <textarea rows="9" cols="40" id="Output"></textarea>
 </div>
 </body>
 </html>
