--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <br>
                 <script type="text/javascript" src="script.js"></script>
                 <button type = "button" onclick = 'exportresult()'>Convert!</button>
-  
+<div>
+  <p></p>
+</div>
   <textarea rows="9" cols="40" id="Output"></textarea>
 </div>
 </body>
