--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <textarea rows="9" cols="40" id = "customMon"></textarea>
                 <br>
                 <script type="text/javascript" src="script.js"></script>
-                <button type = "button" onclick = 'exportresult()'>Convert!</button>
+                <button type = "button" onclick = 'savecustom()'>Convert!</button>
 <div>
   <p></p>
 </div>
