--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>BSS Calc Parser</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <base target="_blank">
 </head>
 <body>
