--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div>
-  <p>Paste the PS! importable below.</p>
+  <p>Paste the PS! importable below:</p>
                 <textarea rows="9" cols="40" id = "customMon"></textarea>
                 <br>
                 <script type="text/javascript" src="script.js"></script>
