Update nhb text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <textarea rows="9" cols="40" id = "customMon"></textarea>
                 <br>
                 <script type="text/javascript" src="script.js"></script>
-  		          <input class="btn-input" type="checkbox" id="l100"/><label class="btn btn-xwide" for="l100">Level 100?</label>
+  		          <input class="btn-input" type="checkbox" id="l100"/><label class="btn btn-xwide" for="l100">No holds barred?</label>
                 <br>
                 <button type = "button" onclick = 'savecustom()'>Convert!</button>
 <div>
