--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <html lang="us">
 <link rel="icon" type="image/png" href="favicon.ico" sizes="32x32" />
 <link rel="icon" type="image/png" href="favicon.ico" sizes="16x16" />
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-71936684-1', 'auto');
-  ga('send', 'pageview');
-</script>
-
 <head>
     <meta charset="UTF-8" />
     <title>BSS Calc Parser</title>
@@ -31,5 +21,6 @@
 </div>
   <textarea rows="9" cols="40" id="Output"></textarea>
 </div>
+  <p></p><p></p><p><a href="https://github.com/LegoFigure11/custom-calc-parser">View on Github</a></p>
 </body>
 </html>
