--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <base target="_blank">
 </head>
 <body>
+ <script>
+    window.location.replace("https://cantsay.github.io/resources/importable-to-calc/");
+</script>
 <div>
   <p>Paste the PS! importable below:</p>
                 <textarea rows="9" cols="40" id = "customMon"></textarea>
